[package]
name = "stusb4500"
description = "STUSB4500 USB-PD Sink controller driver"
version = "0.1.0"
authors = ["Gustav Palmqvist <gustavp@gpa-robotics.com>"]
edition = "2021"
homepage = "https://github.com/Atmelfan/stusb4500-rs"
repository = "https://github.com/Atmelfan/stusb4500-rs"
license = "MIT/Apache-2.0"
readme = "./README.md"

keywords = ["no-std", "embedded-hal", "driver", "usb", "usb-pd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = {version = "1.2.1", default-features = false}
bitflags = "2.0"
bitfield = "0.14"
embedded-hal = "0.2"
clap = { version = "4.5.16", features = ["derive"] }

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.9"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
