[workspace]
members = [".", "stusb4500-utils"]

[package]
name = "stusb4500"
description = "STUSB4500 USB-PD Sink controller driver"
version = "0.2.0"
authors = ["Gustav Palmqvist <gustavp@gpa-robotics.com>"]
edition = "2021"
homepage = "https://github.com/Atmelfan/stusb4500-rs"
repository = "https://github.com/Atmelfan/stusb4500-rs"
license = "MIT/Apache-2.0"
readme = "./README.md"

keywords = ["no-std", "embedded-hal", "driver", "usb", "usb-pd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = {version = "1.2.1", default-features = false}
bitflags = "2.6"
bitfield = "0.17"
embedded-hal = "1"

[dev-dependencies]
linux-embedded-hal = "0.4"
embedded-hal-mock = "0.11"
